<resources>
    <string name="app_name">Qwizard</string>

<!--    categories and difficulties-->
    <string-array name="category_array">
        <item>Random category</item>
        <item>Geography</item>
        <item>Art</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>Random difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

<!--    Welcome screen-->
    <string name="welcome_play_text">Select a category and a difficulty or play a random game.</string>
    <string name="button_play_text">Play</string>

    !--    Quiz fragment-->
    <string name="initial_question_counter_text">0</string>
    <string name="counter_divider">/</string>
    <string name="initial_total_question_count">0</string>
    <string name="initial_time">00</string>
    <string name="sample_question_text">A sample question?</string>
    <string name="sample_answer_1">answer 1</string>
    <string name="sample_answer_2">answer 2</string>
    <string name="sample_answer_3">answer 3</string>
    <string name="sample_answer_4">answer 4</string>
    <string name="empty_quiz_string">Oh no! No trivias found for your selection. Please try again!</string>
    <string name="question_image">question image</string>
    <string name="clock_icon">clock icon</string>

<!--    Result screen-->
    <string name="result_title">Quiz result</string>
    <string name="result_default">00</string>
    <string name="play_again_text">Play Again</string>
    <string name="you_played">You played:</string>
    <string name="result_category">Category:</string>
    <string name="result_difficulty">Difficulty:</string>

<!--    Submit new trivia form-->
    <string name="submit_new_trivia_title">Submit new trivia</string>
    <string name="new_question_hint">Enter a question</string>
    <string name="new_image_hint">Add an image</string>
    <string name="new_correct_answer_hint">correct answer</string>
    <string name="new_wrong_answer_1_hint">wrong answer 1</string>
    <string name="new_wrong_answer_2_hint">wrong answer 2</string>
    <string name="new_wrong_answer_3_hint">wrong answer 3</string>
    <string name="new_trivia_submit_button_text">Submit</string>
    <string name="new_trivia_success_icon_desc">trivia upload was successful</string>
    <string name="new_trivia_success">Success!</string>
    <string name="new_trivia_button_add">New trivia</string>
    <string name="photo_picker_button">photo picker</string>

<!--    Navigation Drawer-->
    <string name="user_image">user image</string>
    <string name="home_link">Home</string>
    <string name="ranking_link">Ranking</string>
    <string name="submit_trivia_link">Submit trivia</string>
    <string name="logout_link">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!--    Widget and ranking -->
    <string name="appwidget_text">Top 10</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_string">No data to display. Please sign in!</string>
    <string name="widget_rank">#</string>

    <string name="ranking_title">Ranking</string>
    <string name="rank">Rank</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="games">Games</string>

</resources>
