<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/home_link" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_trophy_white"
            android:title="@string/ranking_link" />
        <item
            android:id="@+id/nav_submit"
            android:icon="@drawable/ic_send_white"
            android:title="@string/submit_trivia_link" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_white"
            android:title="@string/logout_link" />
    </group>

</menu>