<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/initial_question_counter_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/counter_divider"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/text_view_question_count"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_question_count_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/initial_total_question_count"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/text_view_separator"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_timer_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/initial_time"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_timer_black"
        app:layout_constraintBottom_toBottomOf="@id/text_view_timer_countdown"
        app:layout_constraintEnd_toStartOf="@id/text_view_timer_countdown"
        app:layout_constraintTop_toTopOf="@id/text_view_timer_countdown"
        android:contentDescription="@string/clock_icon" />

    <ImageView
        android:id="@+id/image_view_question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="4dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/text_view_question_count"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/question_image" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_question"
        android:text="@string/sample_question_text"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/answer_layout"
        app:layout_constraintTop_toBottomOf="@+id/text_view_question_count"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintVertical_chainStyle="packed" />


    <RelativeLayout
        android:id="@+id/answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_question"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button_answer_1"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/sample_answer_1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_answer_2"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/button_answer_1"
            android:background="@color/colorPrimary"
            android:text="@string/sample_answer_2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_answer_3"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@id/button_answer_2"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:text="@string/sample_answer_3"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_answer_4"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@id/button_answer_2"
            android:layout_margin="4dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/button_answer_3"
            android:background="@color/colorPrimary"
            android:text="@string/sample_answer_4"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>